tests/snapshots/snapshots__budget_mitt_level1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 50 → level 1 (32 words)

index.ts
     1→export type EventType
     5→export type Handler
     6→export type WildcardHandler
    12→export type EventHandlerList
    13→export type WildCardEventHandlerList
    18→export type EventHandlerMap
    23→export interface Emitter
    27→	on
    33→	off
    36→	emit
    46→export default function mitt
