tests/snapshots/snapshots__budget_mitt_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 5 → level 0 (2 words)

README.md
src/index.ts
