tests/snapshots/snapshots__budget_mitt_root_level5.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 540 → level 7 (534 words)

README.md
     9→# Mitt
    10→
    11→> Tiny 200b functional event emitter / pubsub.
    21→## Table of Contents
    22→
    23→-   [Install](#install)
    24→-   [Usage](#usage)
    25→-   [Examples & Demos](#examples--demos)
    26→-   [API](#api)
    27→-   [Contribute](#contribute)
    28→-   [License](#license)
    30→## Install
    31→
    32→This project uses [node](http://nodejs.org) and [npm](https://npmjs.com). Go check them out if you don't have them locally installed.
    56→## Usage
    57→
    58→```js
    59→import mitt from 'mitt'
    81→### Typescript
    82→
    83→Set `"strict": true` in your tsconfig.json to get improved type inference for `mitt` instance methods.
   113→## Examples & Demos
   114→
   115→<a href="http://codepen.io/developit/pen/rjMEwW?editors=0110">
   116→  <b>Preact + Mitt Codepen Demo</b>
   117→  <br>
   118→  <img src="https://i.imgur.com/CjBgOfJ.png" width="278" alt="preact + mitt preview">
   119→</a>
   123→## API
   124→
   125→<!-- Generated by documentation.js. Update this documentation by updating the source code. -->
   127→#### Table of Contents
   128→
   129→-   [mitt](#mitt)
   130→-   [all](#all)
   131→-   [on](#on)
   132→    -   [Parameters](#parameters)
   133→-   [off](#off)
   134→    -   [Parameters](#parameters-1)
   135→-   [emit](#emit)
   136→    -   [Parameters](#parameters-2)
   138→### mitt
   139→
   140→Mitt: Tiny (~200b) functional event emitter / pubsub.
   144→### all
   145→
   146→A Map of event names to registered handler functions.
   148→### on
   149→
   150→Register an event handler for the given type.
   152→#### Parameters
   153→
   154→-   `type` **([string](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/String) \| [symbol](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Symbol))** Type of event to listen for, or `'*'` for all events
   155→-   `handler` **[Function](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Statements/function)** Function to call in response to given event
   157→### off
   158→
   159→Remove an event handler for the given type.
   160→If `handler` is omitted, all handlers of the given type are removed.
   162→#### Parameters
   163→
   164→-   `type` **([string](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/String) \| [symbol](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Symbol))** Type of event to unregister `handler` from, or `'*'`
   165→-   `handler` **[Function](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Statements/function)?** Handler function to remove
   167→### emit
   168→
   169→Invoke all handlers for the given type.
   170→If present, `'*'` handlers are invoked after type-matched handlers.
   174→#### Parameters
   175→
   176→-   `type` **([string](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/String) \| [symbol](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Symbol))** The event type to invoke
   177→-   `evt` **Any?** Any value (object is recommended and powerful), passed to each handler
   179→## Contribute
   180→
   181→First off, thanks for taking the time to contribute!
   182→Now, take a moment to be sure your contributions make sense to everyone else.
   184→### Reporting Issues
   185→
   186→Found a problem? Want a new feature? First of all see if your issue or idea has [already been reported](../../issues).
   187→If don't, just open a [new clear and descriptive issue](../../issues/new).
   189→### Submitting pull requests
   190→
   191→Pull requests are the greatest contributions, so be sure they are focused in scope, and do avoid unrelated commits.
   203→## License
   204→
   205→[MIT License](https://opensource.org/licenses/MIT) © [Jason Miller](https://jasonformat.com/)
src/index.ts
     1→export type EventType = string | symbol;
     5→export type Handler<T = unknown> = (event: T) => void;
     6→export type WildcardHandler<T = Record<string, unknown>> = (
     7→	type: keyof T,
     8→	event: T[keyof T]
     9→) => void;
    12→export type EventHandlerList<T = unknown> = Array<Handler<T>>;
    13→export type WildCardEventHandlerList<T = Record<string, unknown>> = Array<
    14→	WildcardHandler<T>
    15→>;
    18→export type EventHandlerMap<Events extends Record<EventType, unknown>> = Map<
    19→	keyof Events | '*',
    20→	EventHandlerList<Events[keyof Events]> | WildCardEventHandlerList<Events>
    21→>;
    23→export interface Emitter<Events extends Record<EventType, unknown>> {
    27→	on(type: '*', handler: WildcardHandler<Events>): void;
    33→	off(type: '*', handler: WildcardHandler<Events>): void;
    36→	emit<Key extends keyof Events>(
    37→		type: undefined extends Events[Key] ? Key : never
    38→	): void;
    41→/**
    42→ * Mitt: Tiny (~200b) functional event emitter / pubsub.
    43→ * @name mitt
    44→ * @returns {Mitt}
    45→ */
    46→export default function mitt<Events extends Record<EventType, unknown>>(
    47→	all?: EventHandlerMap<Events>
    48→): Emitter<Events> {
